Fix board align.

--- a/src/styles/components/_boardList.scss
+++ b/src/styles/components/_boardList.scss
@@ -4,6 +4,6 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	padding: 10px 10px;
-	align-content: flex-start;
+	align-items: flex-start;
 	flex-wrap: wrap;
 }
